src/objects/User_setting__c.object
<CustomObject>
    <fields>
        <fullName>Gantt_type__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Gantt type</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ganttview__c</fullName>
        <label>Ganttview</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Global__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>My default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Userid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User setting</label>
    <nameField>
        <label>User setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>